syntax = "proto3";

package admin.master;

option csharp_namespace = "AdminMaster.Grpc";

service AdminService {
  rpc BanAccount(BanAccountRequest) returns (BanAccountResponse);
  rpc UnbanAccount(UnbanAccountRequest) returns (UnbanAccountResponse);
  rpc MakeRefund(MakeRefundRequest) returns (MakeRefundResponse);
}

message BanAccountRequest {
  int64 subject_account_id = 1;
  int64 created_by_admin_id = 2;
}

message BanAccountResponse {
}

message UnbanAccountRequest {
  int64 subject_account_id = 1;
  int64 created_by_admin_id = 2;
}

message UnbanAccountResponse {
}

message MakeRefundRequest {
  int64 ride_id = 1;
  int64 created_by_admin_id = 2;
}

message MakeRefundResponse {
}