syntax = "proto3";

package account.master;

option csharp_namespace = "AccountMaster.Grpc";


service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
}

message GetAccountRequest {
  int64 account_id = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message Account {
  int64 account_id = 1;
  string name = 2;
  string phone = 3;
  Role role = 4;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ADMIN = 1;
  DRIVER = 2;
  PASSENGER = 3;
}